--- a/css/default.css
+++ b/css/default.css
@@ -67,3 +67,7 @@ td,th {padding:0;}
 .my_page_menu .page_txt{width:100%; height:100%; box-sizing:border-box;}
 .my_page_menu .list_page_hd .page_txt{border-bottom:1px solid #b8b7b7;}
 .my_page_menu .list_page_list .page_txt{border-bottom:1px solid #d8d8d8;}
+
+/*임시플러스버튼*/
+.plus{position:absolute; top:5px; right:3px; width:30px; height:30px; background:#fff url(../images/plus.png) no-repeat center center; background-size:13px 13px; text-indent:-9999px;}
+.plus:active{background:#efefef url(../images/plus.png) no-repeat center center; background-size:13px 13px;}
